--- a/i18n/en.toml
+++ b/i18n/en.toml
@@ -12,7 +12,7 @@ other = "Table of Contents"
 other = "at"
 
 [resume]
-other = "My resume"
+other = "Download My Resume"
 
 [navigation]
 other = "Navigation"
