Added education section

--- a/i18n/en.toml
+++ b/i18n/en.toml
@@ -80,6 +80,9 @@ other = "Show Less"
 [responsibilities]
 other = "Responsibilities:"
 
+[specialization]
+other = "Specialization:"
+
 [present]
 other = "Present"
 
