--- a/i18n/en.toml
+++ b/i18n/en.toml
@@ -33,7 +33,7 @@ other = "Stay up to date with email notification"
 other = "Enter email"
 
 [newsletter_warning]
-other = "We'll never share your email with anyone else."
+other = "I'll never share your email with anyone else."
 
 [submit]
 other = "Submit"
